# twitkit

./: .gitignore  README.rst  TODOS.md  pyproject.toml  sample.twitkitrc
samples/: sample.favorites.list.json  sample.reply.text.json  sample.tweet.old.json  sample.tweet.photo.json  sample.tweet.text.json  sample.twitkitrc
tests/: test_twitface_creds.py  test_twitkit.py  test_twitkit_creds.py
twitkit/: cli.py  twitface.py  twitter_client.py  twitterface.py  utils.py
