[tool.poetry]
name = "twitkit"
version = "0.1.0"
description = ""
authors = ["Dan Nguyen <dansonguyen@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
tweepy = "^3.8"
click = "^7.1.2"
rich = "^2.0"


[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"


[tool.poetry.scripts]
cli = "twitkit.cli:cli"
